adding a background image and contact info

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
    <header class="page-header">
      <div class="container">
       Telegram: @SuperElina
+      <a href="mailto:elina.minnie1@gmail.com">elina.minnie1@gmail.com</a>
+    <a href="tel:+79179236735">+7 917 923 67 35</a>
      </div>
     </header>
 
