--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
        <h2 class="subheading">Давайте познакомимся</h2>
        <h3>Пара слов о себе</h3>
        <p>Я управляю проектами и процессами. </p>
-       <h3>Чем могу быть полезен</h3>
+       <h3>Чем могу быть полезна</h3>
        <p>Придумаю процесс для работы команды проекта. Выберу и настрою инструменты для ведения задач, документации и общения. Расскажу, чем отличается скрам от канбана.</p>
       </div>
     </section>
